syntax = "proto3";
package ukama.configurator.controller.v1;
option go_package = "github.com/ukama/ukama/systems/configurator/controller/pb/gen";

import "validator.proto";


// Defines the service for controller operations
service ControllerService {
  rpc RestartSite(RestartSiteRequest) returns (RestartSiteResponse);
  rpc RestartNode(RestartNodeRequest) returns (RestartNodeResponse);
}


message RestartSiteResponse {
  RestartStatus status = 1;

}

message RestartNodeRequest {
    string nodeId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "node_id"];;
   }

message RestartSiteRequest {
    string siteName =1;
    string networkId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];

}

message RestartNodeResponse {
    RestartStatus status = 1;

   }

enum RestartStatus {
    RESTART_STATUS_UNKNOWN = 0;
    RESTART_STATUS_SUCCESS = 1;
    RESTART_STATUS_FAILED = 2;
  }